feat: add Data Comparison & Mapping Tool plugin
- Add DataComparisonPlugin extending BasePlugin
- Support CSV and Excel file reading (xlsx, xls, csv)
- Implement interactive file selection for reference and extraction files
- Add data comparison logic with field mapping
- Support field mapping between files A and B
- Export results to CSV with timestamp naming
- Add completion menu for workflow continuation
- Install required dependencies: xlsx, csv-parser, csv-writer
- Register new plugin in CLI main file

The tool allows users to:
1. Select reference file (File A) and extraction file (File B)
2. Compare data using custom field combinations
3. Map fields between files for output formatting
4. Export matched results to timestamped CSV file
5. Continue with new comparisons or return to main menu

Resolves requirement for first module implementation.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "type": "git",
     "url": "git+https://github.com/tcma-team/tcma-cli-tools.git"
   },
-  "keywords": ["cli", "development", "tools", "tcma"],
+  "keywords": [
+    "cli",
+    "development",
+    "tools",
+    "tcma"
+  ],
   "author": "TCMA Team",
   "license": "MIT",
   "engines": {
@@ -29,18 +34,21 @@
     "config/"
   ],
   "dependencies": {
-    "commander": "^11.1.0",
-    "inquirer": "^9.2.12",
     "chalk": "^4.1.2",
+    "commander": "^11.1.0",
+    "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
+    "figlet": "^1.6.0",
+    "inquirer": "^9.2.12",
     "ora": "^5.4.1",
-    "figlet": "^1.6.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/inquirer": "^9.0.7",
     "@types/figlet": "^1.5.6",
-    "typescript": "^5.3.0",
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^20.10.0",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.0",
-    "rimraf": "^5.0.5"
+    "typescript": "^5.3.0"
   }
 }
