--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tcma-cli-tools",
   "version": "1.3.2",
   "description": "TCMA CLI Tools - Development utilities for TCMA team",
-  "main": "dist/index.js",
+  "main": "dist/cli.js",
   "bin": {
     "tcmatools": "./dist/cli.js"
   },
@@ -14,7 +14,11 @@
     "clean": "rimraf dist",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "format:check": "prettier --check src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -51,10 +55,17 @@
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^30.2.0",
+    "prettier": "^3.6.2",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "typescript-eslint": "^8.45.0"
   }
 }
